# GameExpo23

./: .deepsource.toml  .env  .gitignore  README.md  docker-compose.yml
Caddy/: .gitignore  Caddyfile
DV8-Expo/: .gitignore  README.md  pyproject.toml  requirements.txt  run.sh
DV8-Expo/website/: __init__.py  config.py  extensions.py  models.py  routes.py
DV8-Expo/website/static/js/: nav.js
DV8-Expo/website/static/sass/: animations.sass  header.sass  nav.sass  sections.sass  styles.sass
DV8-Expo/website/templates/: base.html  editor.html  game.html  index.html  login.html
GameExpo/: Dockerfile  run.sh
GameExpo/website/: __init__.py  config.py  extensions.py  routes.py
GameExpo/website/static/js/: games.js  main.js  nav.js
GameExpo/website/static/sass/: animations.sass  header.sass  nav.sass  (+2 more)
GameExpo/website/templates/: base.html  index.html
Highscore-Server/: .gitignore  Dockerfile  requirements.txt  run.sh
Highscore-Server/highscore/: config.py  models.py  run.sh  server.py  views.py
Highscore-Server/server/: __init__.py  api.py  auth.py  config.py  extensions.py  models.py  run.sh  server.py  views.py
Highscore-Server/server/static/: style.sass
Highscore-Server/server/templates/: about.html  account.html  auth.html  base.html  error.html  scores.html
TFR/: .gitignore  Dockerfile  requirements.txt  run.sh
TFR/server/: __init__.py  account.py  api.py  auth.py  config.py  extensions.py  filters.py  models.py  views.py
TFR/server/templates/: account.html  auth.html  base.html  error.html  navigation.html  scores.html  settings.html
(+18 files in other folders)
